--- a/Wp.WpfDemo/Wp.WpfDemo.UIL/Properties/Resources.resx
+++ b/Wp.WpfDemo/Wp.WpfDemo.UIL/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="Login" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Login.svg;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="LoginAnimate" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\LoginAnimate.svg;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="Naruto0" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Naruto0.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
